--- a/estilo.css
+++ b/estilo.css
@@ -21,7 +21,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: yellow;
+    background-color: bg-warning;
     overflow-x: hidden;
     
 }
